# advent_of_code_2021

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
adventofcode/: day_1.py  day_2.py  day_3.py  day_4.py
tests/: test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py
