[tool.poetry]
name = "advent_of_code_2021"
version = "0.1.0"
description = ""
authors = ["chhk <chorhatarahuduketuri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
